# drf-typescript-generator

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
drf_typescript_generator/: globals.py  mappings.py  utils.py
drf_typescript_generator/management/commands/: generate_types.py
tests/: settings.py  test_drf_typescript_generator.py  utils.py
